# freeplay-mcp

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  MANUAL_POST_CODEGEN_CHANGES.md  Makefile  README.md  main.py  pyproject.toml  pyrightconfig.json
.github/workflows/: dependency-review.yml  publish.yml  test.yml
scripts/: check_version.py  create_insight_dataset.py.deprecated  determine_version.py  version_utils.py
src/freeplay_mcp/: __init__.py  api_client.py  client.py  freeplay_client.py  response.py  secrets.py  server.py
src/freeplay_mcp/tools/: __init__.py  completions.py  datasets.py  insight_optimization.py  insights.py  logging_analysis.py  projects.py  prompt_optimization.py  prompts.py  search.py  sessions.py  traces.py
swagger/: README.md  pyproject.toml
swagger/python-api/: README.md  setup.py
swagger/python-api/docs/: ActiveReviewQueue.md  AddMemberRequest.md  AgentDatasetResponse.md  AgentDatasetResponse1.md  AgentDatasetsApi.md  AgentDatasetsListResponse.md  AgentInfo.md  AgentInfo1.md  AgentObservabilityMetrics.md  AgentTestCase.md  AgentTestCase1.md  AgentTestCaseResponse.md  AgentTestCaseResponse1.md  AgentTestCasesListResponse.md  AgentsApi.md  Aggregate.md  AggregateTraceMetrics.md  AlignmentExampleInfo.md  AlignmentScore.md  AndFilter.md  AnthropicBase64Source.md  AnthropicFileBlock.md  AnthropicImageBlock.md  AnthropicMessage.md  AnthropicTextBlock.md  AnthropicTool.md  AnthropicToolResultBlock.md  AnthropicToolUseBlock.md  AnthropicURLSource.md  ApiStyle.md  AssistantMessage.md  AssistantMessageInfo.md  AudioBlock.md  AudioBlockInfo.md  AutoCategorizationCategoryInfo.md  AutoEvalCriteriaType.md  AutoEvalFailureInfo.md  AutoEvalTemplate.md  AutoEvaluationInfo.md  AutomationAction.md  (+359 more)
swagger/python-api/swagger_client/: __init__.py  api_client.py  rest.py
swagger/python-api/swagger_client/api/: __init__.py  agents_api.py  (+14 more)
swagger/python-api/test/: test_active_review_queue.py  test_add_member_request.py  test_agent_dataset_response.py  test_agent_dataset_response1.py  test_agent_datasets_api.py  test_agent_datasets_list_response.py  test_agent_info.py  test_agent_info1.py  test_agent_observability_metrics.py  test_agent_test_case.py  test_agent_test_case1.py  test_agent_test_case_response.py  test_agent_test_case_response1.py  test_agent_test_cases_list_response.py  test_agents_api.py  test_aggregate.py  test_aggregate_trace_metrics.py  test_alignment_example_info.py  test_alignment_score.py  test_and_filter.py  test_anthropic_base64_source.py  test_anthropic_file_block.py  test_anthropic_image_block.py  test_anthropic_message.py  test_anthropic_text_block.py  test_anthropic_tool.py  test_anthropic_tool_result_block.py  test_anthropic_tool_use_block.py  test_anthropic_url_source.py  test_api_style.py  test_assistant_message.py  test_assistant_message_info.py  test_audio_block.py  test_audio_block_info.py  test_auto_categorization_category_info.py  test_auto_eval_criteria_type.py  test_auto_eval_failure_info.py  test_auto_eval_template.py  test_auto_evaluation_info.py  test_automation_action.py  (+361 more)
(+212 files in other folders)
