[project]
name = "freeplay-mcp"
version = "0.1.0"
description = "Workflow-oriented MCP server for the Freeplay API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.26.0",
    "six>=1.10",
    "urllib3>=1.15.1",
    "python-dateutil>=2.5.3",
    "certifi>=14.05.14",
]

[project.scripts]
freeplay-mcp = "freeplay_mcp.server:main"

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/freeplay_mcp", "swagger/python-api/swagger_client"]
