[project]
name = "freeplay-mcp"
version = "0.1.0"
description = "Workflow-oriented MCP server for the Freeplay API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp[tasks]>=3.0.0b1",
    "pydantic>=2.0",
    "six>=1.10",
    "urllib3>=1.15.1",
    "python-dateutil>=2.5.3",
    "certifi>=14.05.14",
]

[project.scripts]
freeplay-mcp = "freeplay_mcp.server:main"

[dependency-groups]
dev = [
    "ruff>=0.9.7,<0.15",
    "basedpyright>=1.24.1,<2",
    "pytest>=8.0.0,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/freeplay_mcp", "swagger/python-api/swagger_client"]

[tool.ruff]
exclude = [
    "swagger/**",
]

[tool.ruff.lint]
preview = true
select = [
    "PLC0415",
    "I",
]

[tool.ruff.lint.isort]
known-first-party = ["freeplay_mcp"]
split-on-trailing-comma = true
