[project]
name = "freeplay-mcp"
version = "0.0.3"
description = "A Model Context Protocol server for Freeplay, the ops platform for AI engineering teams"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Freeplay", email = "support@freeplay.ai" }
]
keywords = ["mcp", "freeplay", "ai", "llm", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "fastmcp[tasks]>=3.0.0b1",
    "httpx>=0.28.0,<1.0",
    "pydantic>=2.0",
    "six>=1.10",
    "urllib3>=1.15.1",
    "python-dateutil>=2.5.3",
    "certifi>=14.05.14",
]

[project.urls]
Homepage = "https://freeplay.ai"
Documentation = "https://docs.freeplay.ai"
Repository = "https://github.com/freeplayai/freeplay-mcp"
Issues = "https://github.com/freeplayai/freeplay-mcp/issues"

[project.scripts]
freeplay-mcp = "freeplay_mcp.server:main"

[dependency-groups]
dev = [
    "ruff>=0.9.7,<0.15",
    "basedpyright>=1.24.1,<2",
    "pytest>=8.0.0,<9",
    "packaging>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/freeplay_mcp"]

[tool.ruff]
exclude = ["src/freeplay_mcp/vendor"]

[tool.ruff.lint]
preview = true
select = [
    "PLC0415",
    "I",
]

[tool.ruff.lint.isort]
known-first-party = ["freeplay_mcp"]
split-on-trailing-comma = true
